# PDF_MARKDOWN_Unlimited-OCR

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  config.py  jobs.py  main.py  native_ops.py
backend/app/engine/: __init__.py  base.py  fake.py  fast_decode.py  registry.py  repetition.py  sidecar.py  unlimited.py
backend/app/pipeline/: layout.py  merge.py  pdf.py  pdf_fonts.py  render.py  runner.py
backend/app/sidecar/: __init__.py  client.py  materializer.py  protocol.py
backend/app/translate/: __init__.py  client.py  engine.py  glossary.py  masking.py  prompts.py  segment.py  types.py
backend/app/translate/data/: seed_ko.json
backend/tests/: conftest.py  test_api.py  test_api_translate.py  test_config_dotenv.py  test_fast_decode.py  test_jobs_gc.py  test_layout.py  test_merge.py  test_moe_fastpath.py  test_moe_fused.py  test_native_ops.py  test_pdf_fonts.py  test_pdf_render.py  test_registry.py  test_repetition.py  test_rope_cache.py  test_runner_failures.py  test_sidecar_client.py  test_sidecar_engine.py  test_sidecar_materializer.py  test_sidecar_protocol.py  test_translate_client.py  test_translate_engine.py  test_translate_eval.py  test_translate_glossary.py  test_translate_masking.py  test_translate_segment.py
backend/tests/fixtures/: j_9ac80d37f2d4_page27_numeric_loop.txt
backend/tools/: __init__.py  translate_eval.py
benchmark_docs/: README.md
docs/: ARCHITECTURE.md  CUDA_5070TI_MULTI_OCR_PLAN.md  OCR_BENCHMARK.md  OCR_ENGINE_PROTOCOL.md  OVISOCR2_CUDA_5070TI.md  PADDLEOCR_VL_BLACKWELL_5070TI.md
frontend/: app.js  index.html  layout-fit.js  package-lock.json  package.json  styles.css
frontend/tests/: package.json  replay.test.mjs
frontend/tests/e2e/: ui.e2e.mjs
frontend/tests/fixtures/: fake-3page-2chunk.sse.txt  real-2page-1chunk.sse.txt
native/: CMakeLists.txt  README.md  pyproject.toml
native/src/: uocr_native.cpp
native/tests/: test_parity.py
scripts/: _smoke_common.py  benchmark_ocr_engines.py  check_cuda_environment.py  make_sample_pdf.py  smoke_e2e.sh  smoke_ovisocr2_5070ti.py  smoke_paddleocr_vl_5070ti.py
services/ovisocr2/: Dockerfile  pyproject.toml
services/ovisocr2/app/: config.py  main.py  model.py  parser.py
services/ovisocr2/tests/: test_parser.py
services/ovisocr2/tests/fixtures/: sample_raw.md
services/paddleocr_vl/: Dockerfile  pyproject.toml
services/paddleocr_vl/app/: adapter.py  config.py  main.py  model.py
services/paddleocr_vl/tests/: test_adapter.py
services/paddleocr_vl/tests/fixtures/: official_page.json
